Gee, in_array is slow. Fixups
- Removed the dup check, it didn't work anyhow. and in_array on large arrays is slow apparently.
- Make sure we address all articles by article.bliss-article to prevent overlap with content
- Limit images to 600px width to not kill our layout

--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -35,7 +35,8 @@ input {
     padding: 5px;
     color: #333;
 }
-img { 
+img {
+    max-width: 600px;
 }
 .date {
     position: relative;
